--- a/index.html
+++ b/index.html
@@ -1,29 +1,81 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width">
-            <title></title>
+<html>
 
-        <!--put your external stylesheet links here-->
-        <link rel="stylesheet" href="css/style.css">
-        <!--[if IE<9]>
-            <link rel="stylesheet" href="css/style.ie.css">
-        <![endif]-->
+<head>
+	<title>leaflet-elevation.js</title>
+	<style> html, body, #map, #elevation-div { height: 100%; width: 100%; padding: 0; margin: 0; } #map { height: 75%; } #elevation-div {	height: 25%; font: 12px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif; } </style>
 
-         <!--you can also place internal styles here;
-             place these within <style> tags-->
-        
-    </head>
+    <!-- leaflet-ui -->
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <script src="https://unpkg.com/leaflet-ui@0.6.0/dist/leaflet-ui.js"></script>
 
-    <body>
-        <!--put your initial page content here-->
+    <!-- leaflet-elevation -->
+    <link rel="stylesheet" href="https://unpkg.com/@raruto/leaflet-elevation/dist/leaflet-elevation.css" />
+    <script src="https://unpkg.com/@raruto/leaflet-elevation/dist/leaflet-elevation.js"></script>
 
-        <!--you can also use this space for internal scripts;
-        place these within <script> tags-->
+</head>
 
-        <!--put your external script links here-->
-        <script type="text/javascript" src="js/main.js"></script>
-        <script type="text/javascript" src="lib/jquery-3.5.1.js"></script>
-    </body>
+<body>
+
+	<div id="map" class="leaflet-map"></div>
+
+	<script>
+		let opts = {
+			map: {
+				center: [41.4583, 12.7059],
+				zoom: 5,
+				fullscreenControl: false,
+				resizerControl: true,
+				preferCanvas: true,
+				rotate: true,
+				// bearing: 45,
+				rotateControl: {
+					closeOnZeroBearing: true
+				},
+			},
+			elevationControl: {
+				url: "https://raruto.github.io/leaflet-elevation/examples/via-emilia.gpx",
+				options: {
+					theme: "lightblue-theme",
+					collapsed: false,
+					autohide: false,
+					autofitBounds: true,
+					position: "bottomleft",
+					detached: true,
+					summary: "inline",
+					imperial: false,
+					// altitude: "disabled",
+					slope: "disabled",
+					speed: false,
+					acceleration: false,
+					time: "summary",
+					legend: true,
+					followMarker: true,
+					almostOver: true,
+					distanceMarkers: false,
+					hotline: false,
+				},
+			},
+			layersControl: {
+				options: {
+					collapsed: false,
+				},
+			},
+		};
+
+		let map = L.map('map', opts.map);
+
+		let controlElevation = L.control.elevation(opts.elevationControl.options).addTo(map);
+		let controlLayer = L.control.layers(null, null, opts.layersControl.options);
+
+		controlElevation.on('eledata_loaded', ({layer, name}) => controlLayer.addTo(map) && layer.eachLayer((trkseg) => trkseg.feature.geometry.type != "Point" && controlLayer.addOverlay(trkseg, trkseg.feature && trkseg.feature.properties && trkseg.feature.properties.name || name)));
+
+		controlElevation.load(opts.elevationControl.url);
+	</script>
+
+
+	<!--<a href="https://github.com/Raruto/leaflet-elevation" class="view-on-github" style="position: fixed;top: 30px;left: calc(50% - 81px);z-index: 9999;"> <img alt="View on Github" src="https://raruto.github.io/img/view-on-github.png" title="View on Github" width="163"> </a>-->
+
+</body>
+
 </html>
