--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
     <script src="https://unpkg.com/leaflet-ui@0.6.0/dist/leaflet-ui.js"></script>
 
     <!-- leaflet-elevation -->
-    <link rel="stylesheet" href="css/leaflet-elevation.css" />
-    <script src="https://unpkg.com/@raruto/leaflet-elevation/dist/leaflet-elevation.js"></script>
+    <!--<link rel="stylesheet" href="css/leaflet-elevation.css" />
+    <script src="https://unpkg.com/@raruto/leaflet-elevation/dist/leaflet-elevation.js"></script>-->
+    
 
 </head>
 
@@ -38,8 +39,8 @@
 <body>
 
     <div id="map" class="leaflet-map"></div>
+    <script type="text/javascript" src="js/img.js"></script>
 
-    <script type="text/javascript" src="js/main.js"></script>
 
 
     <!-- Splash Screen Modal -->
