--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
             font: 12px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;
         }
     </style>
-
+    <h2 class="head1" data-assembly-id="116049"><strong>Terrain On The Great Plain: Map of Nerbraska Physical Landscape</map></strong></h2>
+    <!-- <h2 class="head1" data-assembly-id="116049"><strong>Map of Nerbraska Physical Landscape</map></strong></h2> -->
     <!-- leaflet-ui -->
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src="https://unpkg.com/leaflet-ui@0.6.0/dist/leaflet-ui.js"></script>
 
+    <!-- <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="css/style.css">
     <!-- leaflet-elevation -->
     <link rel="stylesheet" href="css/leaflet-elevation.css" />
     <script src="https://unpkg.com/@raruto/leaflet-elevation/dist/leaflet-elevation.js"></script>
@@ -38,7 +41,7 @@
 <body>
 
     <div id="map" class="leaflet-map"></div>
-
+    
     <script type="text/javascript" src="js/main.js"></script>
 
 
@@ -53,8 +56,8 @@
                         class="slider-container js-slider-container overflow-hidden d-flex rw-slider rw-next-disabled rw-prev-disabled">
                         <div class="rw-track d-flex align-items-center">
                             <div class="rw-slide col-100 px-20">
-                                <h1 class="md-assembly card print-false" data-assembly-id="116049"><strong>Breif
-                                        introduction to Nerbraska</strong></h1>
+                                <h2 class="md-assembly card print-false" data-assembly-id="116049"><strong>Breif
+                                        introduction to Nerbraska</strong></h2>
                             </div>
                         </div>
                     </div>
@@ -92,7 +95,8 @@
                             the<span>&nbsp;</span>American Civil War<span>&nbsp;</span>(1861&ndash;65) and the
                             consequent immigration, the fertile soils of <strong>Nebraska</strong> were plowed, and its
                             grasslands gave rise to a range cattle industry. As a result, the state has been a major
-                            food producer since statehood.</p>
+                            food producer since statehood.
+                        </p>
                         <p class="topic-paragraph">Rivers have been important to <strong>Nebraska&rsquo;s</strong>
                             geography and settlement. A majority of <strong>Nebraskans</strong> live close to
                             the<span>&nbsp;</span><span
@@ -111,10 +115,9 @@
                 </div>
             </div>
 </body>
-<h1 class="h1">Land</h1>
+<h2 class="h1">Land</h2>
 <div class="md-sentinel--spy-target"></div>
 <section id="ref78818" data-level="2" data-has-spy="true">
-    <h2 class="h2"><span id="ref614208"></span>Relief</h2>
     <div class="assemblies">
         <div class="w-100">
             <figure class="md-assembly card print-false" data-assembly-id="64101">
