--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             font: 12px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;
         }
     </style>
-    <h1 class="md-assembly card print-false" data-assembly-id="116049"><strong>Terrain on the Great Plain: Map of Physical Landscape of Nerbraska</strong></h1>
+    <h2 class="title_map" data-assembly-id="116049" ><strong>Terrain on the Great Plain: Map of Physical Landscape of Nerbraska</strong></h2>
     <!-- leaflet-ui -->
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src="https://unpkg.com/leaflet-ui@0.6.0/dist/leaflet-ui.js"></script>
@@ -40,6 +40,7 @@
 
     <div id="map" class="leaflet-map"></div>
     <script type="text/javascript" src="js/main.js"></script>
+    
 
 
 
@@ -94,6 +95,7 @@
                             consequent immigration, the fertile soils of <strong>Nebraska</strong> were plowed, and its
                             grasslands gave rise to a range cattle industry. As a result, the state has been a major
                             food producer since statehood.
+                            <br><img src="img/nebraska2.jpeg" width="300" height="300" alt=""/>
                         </p>
                         <p class="topic-paragraph">Rivers have been important to <strong>Nebraska&rsquo;s</strong>
                             geography and settlement. A majority of <strong>Nebraskans</strong> live close to
@@ -107,8 +109,7 @@
                             <strong>Nebrathka</strong> (&ldquo;Flat Water&rdquo;), a reference to the Platte. Area
                             77,347 square miles (200,329 square km). Population (2020) 1,961,504; (2022 est.) 1,967,923.
                         </p>
-                        <p class="topic-paragraph"><img src="img/nebraska1.jpeg" width="300" height="300" alt="" /><img
-                                src="img/nebraska2.jpeg" width="300" height="300" alt="" /></p>
+                        <p class="image"><img align="right" src="img/nebraska1.jpeg" width="300",height='300'  alt=""/></p>
                     </div>
                 </div>
             </div>
@@ -130,6 +131,8 @@
         States&rsquo; principal physiographic regions&mdash;the till plains of the Central Lowland (in the eastern third
         of the state) and the<span>&nbsp;</span>Great Plains<span>&nbsp;</span>(which makes up the centre of the state).
     </p>
+    <div id="map2" class="leaflet-map"></div>
+    <script type="text/javascript" src="js/img.js"></script>
     <span class="marker p4"></span><span class="marker AM4 am-inline"></span><span
         class="marker MOD4 mod-inline"></span>
     <p class="topic-paragraph">The<span>&nbsp;</span><span id="ref799667"></span>Sand Hills<span>&nbsp;</span>region of
@@ -145,5 +148,6 @@
         the river valleys, much of south-central Nebraska, and a large portion of the panhandle district are flatlands.
     </p>
 </section>
+
 
 </html>
